Add watermark option to settings: include label and tooltip in localization files, and update options UI

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -134,6 +134,16 @@
         />
       </div>
       <div class="input-wrapper">
+        <label for="enableWatermark" data-message="localize"
+          >__MSG_OptionsLabelEnableWatermark__:</label
+        >
+        <input
+          type="checkbox"
+          id="enableWatermark"
+          data-i18n-attr="title:OptionsTooltipEnableWatermark"
+        />
+      </div>
+      <div class="input-wrapper">
         <label for="disableCache" data-message="localize">
           __MSG_OptionsLabelDisableCache__:
         </label>
